fix zoom on iphone safari

--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,5 +1,5 @@
 .input {
-  font-size: 17px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 400;
   color: var(--text-color);
