--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -1,5 +1,5 @@
 .input {
-  font-size: 14px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 400;
   color: var(--text-color);
